--- a/src/Components/ProcoreFilePicker/SubComponents/FileRow/FileRow.module.css
+++ b/src/Components/ProcoreFilePicker/SubComponents/FileRow/FileRow.module.css
@@ -25,21 +25,7 @@
   padding: calc(var(--standard-padding) /2);
 }
 
-.fieldCenter {
-  text-align: center;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.img {
-  height: 1em;
-  width: 1em;
-  filter: invert(100%);
-}
-
-.iconButton {
-  width: 3em;
+.field button {
   margin: auto;
   display: inline-flex;
   flex-direction: row;
@@ -57,4 +43,25 @@
   background-image: linear-gradient(to bottom, rgba(255, 255, 255, 0.1), rgba(255, 255, 255, 0));
   box-shadow: inset 0 0 0 1px rgba(16, 22, 26, 0.4), inset 0 -1px 0 rgba(16, 22, 26, 0.2);
   color: #ffffff;
+}
+
+.fieldCenter {
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.img {
+  height: 1em;
+  width: 1em;
+  filter: invert(100%);
+}
+
+.iconButton {
+  width: 3em;
+}
+
+.textButton {
+  width: 100%;
 }
